docs: Remove obsolete sections from user guide